[package]
name = "middleware-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.26"
env_logger = "0.11.6"
tokio = { version = "1.43.0", features = ["full", "rt-multi-thread"] }
tokio-util = "0.7.13"
async-trait = "0.1.86"
actix-web = { version = "4.9.0", features = ["rustls-0_23", "openssl"] }
actix-cors = "0.7.0"
 
rustls = "0.23.23"
rustls-pemfile = "2.2.0"
openssl = "0.10.71"
native-tls = "0.2.14"
dotenv = "0.15"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
futures = "0.3.31"
log4rs = "1.3.0"
anyhow = "1.0.96"
thiserror = "2.0.11"
regex = "1.11.1"
config = "0.15.8"
configparser = "3.1.0"
lazy_static = "1.5.0"
chrono = { version = "0.4.40", features = ["serde"] }
crossbeam = "0.8.4"
tiberius = { version = "0.12.3", features = [
  "tds73",
  "sql-browser-tokio",
  "chrono",
] }
postgres = "0.19.10"
tokio-postgres = "0.7.13"
deadpool-tiberius = "0.1.8"
deadpool-postgres = "0.14.1"
